merchprofile.jsx got product to display correctly and added upload image button.

--- a/src/css/googleMaps.css
+++ b/src/css/googleMaps.css
@@ -26,11 +26,12 @@
     font-size: 1.3em;
   }
 
-  .logOut{
+  .lOut{
     padding-right: 90%;
      font-size: smaller;
      padding-bottom: 0px;
      cursor: pointer;
+     color: #14213D;
   }
 
   
