--- a/src/css/login.css
+++ b/src/css/login.css
@@ -1,8 +1,16 @@
+.main{
+    width: 100%;
+    height: 100%;
+}
+
 .merchantLog{
   padding-left: 80%;
    font-size: smaller;
    padding-bottom: 0px;
    cursor: pointer;
+   background-color: #FCA311;
+   border-bottom-style:groove;
+   border-bottom-width: 10px;
 }
 
 h1{
@@ -21,6 +29,9 @@ h2{
     font-size: smaller;
     text-align: center;
     padding-bottom: 30px;
+    border-bottom-style: ridge;
+    border-bottom-width: 5px;
+    
 }
 
 .preg{
@@ -37,6 +48,7 @@ h2{
 }
 
 .patronLog{
+    background-color: #14213D;
     text-align: center;
     justify-content:center;
 }
@@ -44,4 +56,12 @@ h2{
 .flog{
     align-content: center;
     padding-left: 37%;
+}
+
+.logText{
+    color: #E5E5E5;
+}
+
+.head{
+    background-color: #E5E5E5;
 }
