--- a/src/css/patronMain.css
+++ b/src/css/patronMain.css
@@ -10,6 +10,7 @@
     border: #E5E5E5;
     border-width: 3px;
     border-style: groove;
+  
 }
 
 .logOut{
@@ -46,4 +47,22 @@
     display: flex;
   }
 
+
+  .commentHead{
+      background-color: #E5E5E5 ;
+      text-align: center;
+      margin-top: 10%;
+      margin-right: 30%;
+      margin-left:30%
+  }
   
+  .comment{
+    background-color: #E5E5E5 ;
+    text-align: center;
+    margin-left: 15%;
+    margin-right: 15%;
+  }
+
+  .comments{
+    background-color: #14213D 
+  }
