--- a/src/css/patronMain.css
+++ b/src/css/patronMain.css
@@ -55,6 +55,14 @@
   
   }
 
+  .address{
+    margin-left: 30%;
+    margin-right:2%;
+    background-color: #E5E5E5;
+    text-align: center;
+  
+  }
+
 
 
   .flexbox-container {
