--- a/src/css/patronMain.css
+++ b/src/css/patronMain.css
@@ -1,10 +1,12 @@
 .mainp{
     background-color: #14213D;
+    opacity: 95%;
 }
 
 .merchHead{
     background-color: #E5E5E5 ;
     margin-bottom: 1%;
+    opacity: 95%;
 }
 .products{
     background-color: #E5E5E5;
@@ -27,6 +29,7 @@
       align-items: center;
       margin-top: 10px;
       background-color: #FCA311;
+      opacity: 70%;
   }
 
   .buttonp{
@@ -34,6 +37,7 @@
     margin-bottom: 10px;
     background-color: #FCA311;
     margin-right: 30%;
+    opacity: 70%;
 }
 
   .heading{
@@ -48,10 +52,12 @@
 
   .product{
     border-bottom-style:ridge;
+    margin-top: 2%;
     margin-left: 30%;
     margin-right:2%;
     background-color: #E5E5E5;
     text-align: center;
+    font-size: 1.3rem;
   
   }
 
@@ -60,6 +66,7 @@
     margin-right:2%;
     background-color: #E5E5E5;
     text-align: center;
+    font-size: 1.2rem;
   
   }
 
@@ -77,6 +84,7 @@
       margin-right: 30%;
       margin-left:30%;
       border-style: groove;
+      opacity: 80%;
   }
   
   .comment{
@@ -84,6 +92,7 @@
     text-align: center;
     margin-left: 15%;
     margin-right: 15%;
+    opacity: 80%;
     
   }
 
@@ -91,6 +100,7 @@
     background-color: #14213D;
     border-style: groove;
     margin-top: 3%;
+    opacity: 95%;
   }
 
 
