patronMerch.jsx added merchant info at top and adjust styling. patronMain.jsx added view merchant profile button and styled.

--- a/src/css/patronMain.css
+++ b/src/css/patronMain.css
@@ -7,7 +7,18 @@
     background-color: #E5E5E5 ;
     margin-bottom: 1%;
     opacity: 95%;
+
 }
+
+.merchAbout{
+  background-color: #E5E5E5 ;
+  margin-bottom: 1%;
+  margin-top: 1%;
+  opacity: 95%;
+  text-align: center;
+
+}
+
 .products{
     background-color: #E5E5E5;
     border: #E5E5E5;
@@ -70,6 +81,17 @@
   
   }
 
+  .addressprof{
+    margin-left: 38%;
+    margin-right:2%;
+    background-color: #E5E5E5;
+    text-align: center;
+    font-size: 1.2rem;
+    cursor: pointer;
+    border-style: none;
+  
+  }
+
 
 
   .flexbox-container {
@@ -120,3 +142,5 @@
   .prodPic{
       border-style:outset;
   }
+
+  
