--- a/src/css/merchantMain.css
+++ b/src/css/merchantMain.css
@@ -56,3 +56,11 @@
   .clearCart{
     margin-left: 10%;
 }
+
+.centerF{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    opacity: 40%;
+    background-color: #E5E5E5;
+}
