--- a/src/css/merchantMain.css
+++ b/src/css/merchantMain.css
@@ -1,5 +1,5 @@
 .logOutMerch{
-    padding-right: 90%;
+    margin-left: 5%;
      font-size: smaller;
      padding-bottom: 0px;
      cursor: pointer;
