--- a/src/css/patronMain.css
+++ b/src/css/patronMain.css
@@ -29,7 +29,7 @@
 }
 
 .logOut{
-    padding-right: 90%;
+    margin-left: 5%;
      font-size: smaller;
      padding-bottom: 0px;
      cursor: pointer;
