merchProfile.jsx added function for made in US highlighted status that displays a made in the USA badge.

--- a/src/css/patronMain.css
+++ b/src/css/patronMain.css
@@ -143,4 +143,10 @@
       border-style:outset;
   }
 
-  
+  .centerUS{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    opacity: 90%;
+    background-color: #E5E5E5;
+}
