--- a/src/css/patronMain.css
+++ b/src/css/patronMain.css
@@ -85,9 +85,12 @@
   .addressprof{
     margin-left: 40%;
     margin-right:2%;
+    margin-top: .005%;
+    margin-bottom: 1%;
     background-color: #E5E5E5;
     text-align: center;
     font-size: 1.2rem;
+    font-style:italic;
     cursor: pointer;
     border-style: none;
   
