Added some styling as well as changing the google maps button on cart.jsx, merchProfile.jsxto the working function that saves lat lng to local storage.

--- a/src/css/patronMain.css
+++ b/src/css/patronMain.css
@@ -155,3 +155,11 @@
     background-color: #E5E5E5;
 }
 
+.centerWash{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: #E5E5E5;
+  border-style:double;
+}
+
